--- a/research/I01 Data Manipulation using Pandas/0531_I01_Data_Mainipulation_BInLiao.ipynb
+++ b/research/I01 Data Manipulation using Pandas/0531_I01_Data_Mainipulation_BInLiao.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,13 +167,29 @@
     "import numpy as np\n",
     "import os as os\n",
     "\n",
-    "# Define the file path\n",
-    "file_path = 'data/titanic.csv'\n",
+    "# Read and prepare for the data:\n",
     "\n",
-    "# Check if the file exists\n",
-    "#if not os.path.exists(file_path):\n",
+    "# Define the data directory and file\n",
+    "data_dir = 'data'\n",
+    "data_file = 'titanic.csv'\n",
+    "file_path = os.path.join(data_dir, data_file)\n",
     "\n",
+    "# Define the URL where the data can be downloaded\n",
+    "url = 'https://raw.githubusercontent.com/Bencool/MBA6636-Business-Analytics/main/research/I01%20Data%20Manipulation%20using%20Pandas/data/titanic.csv'\n",
     "\n",
+    "# Check if the data file exists\n",
+    "if not os.path.isfile(file_path):\n",
+    "    # If not, check if the data directory exists\n",
+    "    if not os.path.isdir(data_dir):\n",
+    "        # If not, create the data directory\n",
+    "        os.makedirs(data_dir)\n",
+    "    \n",
+    "    # Download the data file\n",
+    "    print(f'Downloading file from github ...')\n",
+    "    !wget -O {file_path} {url}\n",
+    "    print(f'File downloaded and saved to {file_path}')\n",
+    "\n",
+    "# Load data into a dataframe.\n",
     "titanic = pd.read_csv(file_path)\n",
     "\n",
     "# List the first few rows of the datafraom\n",
@@ -182,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -223,14 +239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## a. Index/ Reindex an alter row or column labels. \n",
-    "\n",
-    "### "
+    "## a. Index/ Reindex an alter row or column labels. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +396,7 @@
        "5                0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +550,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +574,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -597,124 +611,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
        "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Siblings_Spouses</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
        "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
        "      <td>True</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
        "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1     False       3   \n",
-       "1            2      True       1   \n",
-       "2            3      True       3   \n",
-       "3            4      True       1   \n",
-       "4            5     False       3   \n",
-       "\n",
-       "                                                Name     Sex   Age  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0   \n",
-       "4                           Allen, Mr. William Henry    male  35.0   \n",
-       "\n",
-       "   Siblings_Spouses  Parch            Ticket     Fare Cabin Embarked  \n",
-       "0                 1      0         A/5 21171   7.2500   NaN        S  \n",
-       "1                 1      0          PC 17599  71.2833   C85        C  \n",
-       "2                 0      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3                 1      0            113803  53.1000  C123        S  \n",
-       "4                 0      0            373450   8.0500   NaN        S  "
+       "   Survived\n",
+       "0     False\n",
+       "1      True\n",
+       "2      True\n",
+       "3      True\n",
+       "4     False"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +663,7 @@
     "    \n",
     "titanic['Survived'] = titanic['Survived'].apply(convert_to_bool)\n",
     "\n",
-    "titanic.head()"
+    "titanic[['Survived']].head()"
    ]
   },
   {
@@ -742,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +832,7 @@
        "9                Nasser, Mrs. Nicholas (Adele Achem)     Mrs"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,25 +860,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Age     AgeGroup\n",
-      "0  22.0  Young Adult\n",
-      "1  38.0        Adult\n",
-      "2  26.0  Young Adult\n",
-      "3  35.0  Young Adult\n",
-      "4  35.0  Young Adult\n",
-      "5   NaN          NaN\n",
-      "6  54.0        Adult\n",
-      "7   2.0        Child\n",
-      "8  27.0  Young Adult\n",
-      "9  14.0        Child\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>AgeGroup</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Child</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>Young Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Child</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age     AgeGroup\n",
+       "0  22.0  Young Adult\n",
+       "1  38.0        Adult\n",
+       "2  26.0  Young Adult\n",
+       "3  35.0  Young Adult\n",
+       "4  35.0  Young Adult\n",
+       "5   NaN          NaN\n",
+       "6  54.0        Adult\n",
+       "7   2.0        Child\n",
+       "8  27.0  Young Adult\n",
+       "9  14.0        Child"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -955,7 +970,7 @@
     "# Use cut to create the AgeGroup column\n",
     "titanic['AgeGroup'] = pd.cut(titanic['Age'], bins=bins, labels=labels)\n",
     "\n",
-    "print(titanic[['Age', 'AgeGroup']].head(10))"
+    "titanic[['Age', 'AgeGroup']].head(10)"
    ]
   },
   {
@@ -969,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1092,7 @@
        "9      True      Sex  female"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
