update some format issue in markdown

--- a/research/I04 Naive Bayes & Linear Regression/0701 I04 Linear Regression Bin Liao.ipynb
+++ b/research/I04 Naive Bayes & Linear Regression/0701 I04 Linear Regression Bin Liao.ipynb
@@ -889,7 +889,8 @@
     "\n",
     "- **R-squared (R²)**: This is a statistical measure that represents the proportion of the variance for a dependent variable that's explained by an independent variable or variables in a regression model. The closer to 1, the better the explanatory power of your model. In your case, R² is 0.7874 (or approximately 78.74%). This means that approximately 78.74% of the variability in '**charges**' can be explained by the variables in our model (age, bmi, number of children, sex, smoker, and region).\n",
     "\n",
-    "In conclusion, our linear regression model seems to have a relatively good fit as the R² is accetpable high. However, the RMSE is also substantial, indicating that our model's predictions are, on average, about $77.67 off from the actual charges. This can be acceptable or not depending on the context—medical charges can vary greatly, so a deviation of $77.67 might not be significant in context. However, always aim to minimize the RMSE and MSE and maximize R². Improvements to the model could possibly be made by using more complex modelling techniques, incorporating more features if available, or fine-tuning the model parameters.\n"
+    "In conclusion, our linear regression model seems to have a relatively good fit as the R² is accetpable high. However, the RMSE is also substantial, indicating that our model's predictions are, on average, about \\$77.67 off from the actual charges. This can be acceptable or not depending on the context—medical charges can vary greatly, so a deviation of \\$77.67 might not be significant in context. However, always aim to minimize the RMSE and MSE and maximize R². Improvements to the model could possibly be made by using more complex modelling techniques, incorporating more features if available, or fine-tuning the model parameters.\n",
+    "\n"
    ]
   },
   {
@@ -1165,11 +1166,6 @@
     "- From the \"Medical costs by BMI (group by Smoker)\" scatter plot, we can infer that smokers' medical costs tend to rise substantially with an increase in BMI. Non-smokers, even those with a high BMI, typically have much lower costs, with few exceptions.\n",
     "- There are some non-smokers with normal BMI who face relatively high medical costs. This could imply the presence of other health factors influencing their costs apart from their body mass."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
