update with group assignment

--- a/research/G06 SVM and RandomForest/0726 G06 SVM and Random Forest.ipynb
+++ b/research/G06 SVM and RandomForest/0726 G06 SVM and Random Forest.ipynb
@@ -1279,23 +1279,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "({'max_depth': 5, 'min_samples_split': 2, 'n_estimators': 300},\n",
-       " {'C': 0.1, 'gamma': 'scale', 'kernel': 'rbf'})"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal parameters for Random Forest:\n",
+      "---------------------------------------------\n",
+      "{'max_depth': 10, 'min_samples_split': 10, 'n_estimators': 300}\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import make_scorer, f1_score\n",
+    "\n",
+    "\n",
+    "# Define scoring function (e.g., F1-score)\n",
+    "scoring_function = make_scorer(f1_score)\n",
+    "\n",
     "\n",
     "# Define hyperparameters for Random Forest\n",
     "rf_params = {\n",
@@ -1304,6 +1308,46 @@
     "    'min_samples_split': [2, 5, 10]\n",
     "}\n",
     "\n",
+    "# Initialize GridSearchCV for Random Forest classifiers\n",
+    "rf_grid = GridSearchCV(rf_clf, rf_params, cv=3, scoring=scoring_function)\n",
+    "\n",
+    "# Fit GridSearchCV\n",
+    "rf_grid.fit(X_train, y_train)\n",
+    "\n",
+    "# Get the best parameters\n",
+    "rf_best_params = rf_grid.best_params_\n",
+    "\n",
+    "print(\"Optimal parameters for Random Forest:\")\n",
+    "print(\"---------------------------------------------\")\n",
+    "print(rf_best_params)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest Best Hyperparameters\n",
+    "- 'max_depth': 10: This is the maximum depth of the trees in the forest. A max depth of 5 means that the decision trees in the Random Forest have a maximum of 10 levels.\n",
+    "- 'min_samples_split': 10: This is the minimum number of samples required to split an internal node. In this case, if a node has at least 10 samples, it can be split into child nodes.\n",
+    "-'n_estimators': 300: This is the number of trees in the forest. In this case, the Random Forest consists of 300 individual decision trees."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal parameters for SVC\n",
+      "---------------------------------------------\n",
+      "{'C': 1, 'gamma': 'scale', 'kernel': 'rbf'}\n"
+     ]
+    }
+   ],
+   "source": [
     "# Define hyperparameters for SVC\n",
     "svc_params = {\n",
     "    'C': [0.1, 1, 10],\n",
@@ -1312,18 +1356,109 @@
     "}\n",
     "\n",
     "# Initialize GridSearchCV for both classifiers\n",
-    "rf_grid = GridSearchCV(rf_clf, rf_params, cv=3, scoring='recall')\n",
-    "svc_grid = GridSearchCV(svc_clf, svc_params, cv=3, scoring='recall')\n",
+    "svc_grid = GridSearchCV(svc_clf, svc_params, cv=3, scoring=scoring_function)\n",
     "\n",
     "# Fit GridSearchCV\n",
-    "rf_grid.fit(X_train, y_train)\n",
     "svc_grid.fit(X_train, y_train)\n",
     "\n",
     "# Get the best parameters\n",
-    "rf_best_params = rf_grid.best_params_\n",
     "svc_best_params = svc_grid.best_params_\n",
     "\n",
-    "rf_best_params, svc_best_params\n"
+    "print(\"Optimal parameters for SVC\")\n",
+    "print(\"---------------------------------------------\")\n",
+    "print(svc_best_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Support Vector Machine (SVM) Best Hyperparameters\n",
+    "- 'C': 1: This is the regularization parameter, controlling the trade-off between achieving a low training error and a low testing error. A smaller value of 'C' creates a wider margin, allowing some misclassification on the training data to achieve better generalization.\n",
+    "- 'gamma': 'scale': This is the kernel coefficient for the 'rbf' (Radial Basis Function) kernel. \n",
+    "- 'kernel': 'rbf': This is the type of kernel used in the SVM. The Radial Basis Function kernel is a popular choice for SVM classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Model - Optimal Classification Report:\n",
+      "---------------------------------------------\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      0.88      0.90      1607\n",
+      "           1       0.57      0.68      0.62       393\n",
+      "\n",
+      "    accuracy                           0.84      2000\n",
+      "   macro avg       0.75      0.78      0.76      2000\n",
+      "weighted avg       0.85      0.84      0.84      2000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the  Random Forest classifiers with best parameters\n",
+    "rf_clf_best = RandomForestClassifier(class_weight='balanced', random_state=42, **rf_best_params)\n",
+    "\n",
+    "# Train the classifiers\n",
+    "rf_clf_best.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "rf_preds_best = rf_clf_best.predict(X_test)\n",
+    "\n",
+    "# Evaluate the models\n",
+    "rf_report_best = classification_report(y_test, rf_preds_best)\n",
+    "\n",
+    "print(\"Random Forest Model - Optimal Classification Report:\")\n",
+    "print(\"---------------------------------------------\")\n",
+    "print(rf_report_best)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC Model - Optimal Classification Report:\n",
+      "---------------------------------------------\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.79      0.86      1607\n",
+      "           1       0.47      0.76      0.58       393\n",
+      "\n",
+      "    accuracy                           0.79      2000\n",
+      "   macro avg       0.70      0.77      0.72      2000\n",
+      "weighted avg       0.84      0.79      0.80      2000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the SVC classifiers with best parameters\n",
+    "svc_clf_best = SVC(class_weight='balanced', random_state=42, **svc_best_params)\n",
+    "\n",
+    "# Train the SVC classifiers\n",
+    "svc_clf_best.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "svc_preds_best = svc_clf_best.predict(X_test)\n",
+    "\n",
+    "# Evaluate the models\n",
+    "svc_report_best = classification_report(y_test, svc_preds_best)\n",
+    "\n",
+    "print(\"SVC Model - Optimal Classification Report:\")\n",
+    "print(\"---------------------------------------------\")\n",
+    "print(svc_report_best)"
    ]
   }
  ],
